# eulerOperator

./: CMakeLists.txt  README.md  main.cpp
data/: halfEdge.cpp  halfEdge.h  vector_data.cpp  vector_data.h
operator/: Build.cpp  Build.h  Writer.cpp  Writer.h  operator.cpp  operator.h
render/: Shader.cpp  callback.h  camera.h  logging.h  render.cpp  render.h  triangulation.cpp  triangulation.h  util.h
render/glsl/: vertex.vs
result_tmp/: 0_solid  1_solid  2_solid  2_solid0  2_solid1  2_solid2  3_solid  4_solid  5_solid  6_solid  7_solid  8_solid  9_solid
